--- a/posts/2022-07-06.md
+++ b/posts/2022-07-06.md
@@ -73,10 +73,10 @@ Let's start with the guesses that a location is a mine (represented in the game 
 We'll add a few helpful views to make sure we don't accidentally treat `flags` as the truth.
 ```sql
 -- Each "flag" is a supposition that the `mine` value is `flag`.
-create table flags (x int, y int, flag int);
+create table flags (x int, y int, flag int, user text);
 create view distinct_flags as select distinct * from flags;
 create view correct_flags as
-select x, y, flag from distinct_flags
+select x, y, flag, user from distinct_flags
 where get_byte(sha256((x::text || y::text)::bytes), 0) % 6 = flag;
 ```
 
@@ -93,10 +93,10 @@ In particular, the `% 6` is where we determine what fraction of grid cells are m
 The guesses that a location is *not* a mine are handled similarly, but with an inequality instead:
 ```sql
 -- Each "test" is a supposition that the `mine` value is not `test`.
-create table tests (x int, y int, test int);
+create table tests (x int, y int, test int, user text);
 create view distinct_tests as select distinct * from tests;
 create view correct_tests as
-select x, y, test from distinct_tests
+select x, y, test, user from distinct_tests
 where get_byte(sha256((x::text || y::text)::bytes), 0) % 6 != test;
 ```
 
@@ -106,10 +106,10 @@ If they guess wrong the game still goes on, but we'll make some views to notice 
 ```sql
 -- Errors are too bad. But they don't end the game.
 create view errors as
-select x, y, flag as mine, 'flag' as action
+select x, y, flag as mine, 'flag' as action, user
 from distinct_flags where get_byte(sha256((x::text || y::text)::bytes), 0) % 6 != flag
 union all
-select x, y, test as mine, 'test' as action
+select x, y, test as mine, 'test' as action, user
 from distinct_tests where get_byte(sha256((x::text || y::text)::bytes), 0) % 6 = test;
 ```
 
@@ -121,21 +121,21 @@ There isn't any output, which makes sense as there also isn't an input.
 
 Let's add an incorrect guess about a mine:
 ```
-materialize=> insert into flags values (0, 0, 0);
+materialize=> insert into flags values (0, 0, 0, 'frank');
 INSERT 0 1
 ```
 Over in the other session, we get our first line of output:
 ```
 materialize=> copy (tail errors) to stdout;
-1657222287227   1       0       0       0       flag
+1657277533154   1       0       0       0       flag    frank
 ```
 This is Materialize's [TAIL](https://materialize.com/docs/sql/tail/) output.
 It reports a timestamp, a change in count, and then the columns of the changed row.
 In this case, our `flag` guess of `0` at coordinate `(0, 0)` is an error.
 
-Let's introduce the correct guess:
+Let's introduce the correct guess (on a different player):
 ```
-materialize=> insert into flags values (0, 0, 1);
+materialize=> insert into flags values (0, 0, 1, 'arjun');
 INSERT 0 1
 ```
 Nothing to report in the other session with the `TAIL`.
@@ -150,31 +150,36 @@ Additionally, a correct `flag` reveals the counts for all other players.
 We'll call that collection of location and player `probes`.
 
 ```sql
--- Each correct flag and test result in probes that are conducted and reported.
---   A correct flag results in a probe and report for *each other* values.
---   A correct test results in a probe and report for *that one* value.
+-- A correct test results in a probe and report for that value.
 create view probes as
-select x, y, test as mine
-from correct_tests
-union all
-select x, y, mine
-from correct_flags, generate_series(0, 5) as mine
-where mine != flag;
+select x, y, test as mine, user
+from correct_tests;
 ```
 
 With our current correct guess about `(0, 0)`, the probes we should perform are:
 ```
 materialize=> select * from probes;
- x | y | mine
----+---+------
- 0 | 0 |    0
- 0 | 0 |    2
- 0 | 0 |    3
- 0 | 0 |    4
- 0 | 0 |    5
-(5 rows)
+ x | y | mine | user
+---+---+------+------
+(0 rows)
+
+materialize=>
 ```
-Each of the mine types other than `1` should be probed, as we have evidence that they are not mines.
+
+Ah. Although we know that `(0, 0)` contains a mine of type `1`, we haven't actually tested for `0` yet.
+We could do that automatically, but let's ask folks to do this themselves.
+
+```
+materialize=> insert into tests values (0, 0, 0, 'frank');
+INSERT 0 1
+materialize=> select * from probes;
+ x | y | mine | user
+---+---+------+-------
+ 0 | 0 |    0 | frank
+(1 row)
+
+materialize=>
+```
 
 We need to "reach out" from each probe, to assess the mines at each location adjacent to a probe.
 When doing this, we keep some notes about where we probed *from* so that we can get the information back efficiently.
@@ -183,7 +188,7 @@ Having done this, we aggregate up each probe and have a count to report!
 ```sql
 -- Each tested location invokes a probe at neighbor locations.
 create view probe_neighbors as
-select distinct probe_x, probe_y, x, y
+select distinct probe_x, probe_y, x, y, user
 from
     probes,
     generate_series(x - 1, x + 1) as probe_x,
@@ -192,36 +197,33 @@ where x != probe_x OR y != probe_y;
 
 -- Each location reports some flavor of mine.
 create view reports as
-select x, y, get_byte(sha256((probe_x::text || probe_y::text)::bytes), 0) % 6 as mine
+select x, y, get_byte(sha256((probe_x::text || probe_y::text)::bytes), 0) % 6 as mine, user
 from probe_neighbors;
 
 -- The number of adjacent mines for probed locations.
 create view totals as
 select probes.x, probes.y, probes.mine, (
     select count(*) from reports
-    where probes.x = reports.x and probes.y = reports.y and probes.mine = reports.mine
-)
+    where probes.x = reports.x and probes.y = reports.y and probes.mine = reports.mine and probes.user = reports.user
+), user
 from probes
-group by 1, 2, 3;
+group by 1, 2, 3, 5;
 ```
 
 If we look at the totals for the probes, we see:
 ```
 materialize=> select * from totals;
- x | y | mine | count
----+---+------+-------
- 0 | 0 |    0 |     0
- 0 | 0 |    2 |     2
- 0 | 0 |    3 |     1
- 0 | 0 |    4 |     1
- 0 | 0 |    5 |     2
-(5 rows)
+ x | y | mine | count | user
+---+---+------+-------+-------
+ 0 | 0 |    0 |     0 | frank
+(1 row)
 
 materialize=>
 ```
 
-Lucky mine type `0` has no mines around it, and should probably be clicked upon!
-Each of the other mine types have some non-zero counts, and we should present that slightly better than this table.
+Luckily mine type `0` has no mines around it, and its neighbors should probably be clicked upon!
+
+Before going down that rabbit hole, let's figure out how to present this information.
 
 ## Presenting Information
 
@@ -233,13 +235,13 @@ This is a description of a rectangular region, all of whose reported counts shou
 
 ```sql
 -- Each entry here results in an output viewport (window) for a certain mine.
-create table viewport (x1 int, x2 int, y1 int, y2 int, mine int);
+create table viewport (x1 int, x2 int, y1 int, y2 int, mine int, user text);
 ```
 
 Each entry in the viewport results in a small grid of locations that we want to report:
 ```sql
 create view cells as
-select distinct x, y, mine from
+select distinct x, y, mine, user from
     viewport,
     generate_series(x1, x2) as x,
     generate_series(y1, y2) as y
@@ -249,58 +251,58 @@ select distinct x, y, mine from
 To actually get something presentable we'll convert all counts to symbols, and then left join with `cells` to be sure we can present *something* (a `.`) for locations without a count.
 ```sql
 -- Convert counts to symbols, and include '.' for empty locations.
-create view symbols as
-select x, y, mine, case when symbol isnull then '.' else symbol end
+create view symbols2 as
+select x, y, mine, case when symbol isnull then ' .' else symbol end, user
 from
 cells left join (
-    select x as x2, y as y2, mine as mine2, count::text as symbol from totals
+    select x as x2, y as y2, mine as mine2, ' ' || count::text as symbol, user as user2 from totals
     union all
-    select x as x2, y as y2, flag as mine2, 'X' as symbol from correct_flags
-) on (cells.x = x2 and cells.y = y2 and cells.mine = mine2);
+    select x as x2, y as y2, flag as mine2, ' X' as symbol, user as user2 from correct_flags
+) on (cells.x = x2 and cells.y = y2 and cells.mine = mine2 and cells.user = user2);
 
 -- Create lines of output by grouping by `y`.
 create view output as
-select y, mine, string_agg(symbol, '' ORDER BY x) AS whole_row
+select y, mine, string_agg(symbol, '' ORDER BY x) AS whole_row, user
 from symbols
-group by y, mine;
+group by y, mine, user;
 ```
 
 To view the output, we'll need to introduce some viewports, specifying rectangle and mine type:
 
 ```sql
 -- Define overlapping viewports.
-insert into viewport values (-10, 10, -10, 10, 0);
-insert into viewport values (-5, 10, -5, 5, 1);
+insert into viewport values (-10, 10, -10, 10, 0, 'frank');
+insert into viewport values (-5, 10, -5, 5, 1, 'arjun');
 ```
 
 We can now peek at the output by selecting `whole_row` and ordering by `y`.
 Let's first look at the `0` mine:
 
 ```
-materialize=> select whole_row from output where mine = 0 order by y;
-       whole_row
------------------------
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- ..........0..........
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
+materialize=> select whole_row from output where mine = 0 and user = 'frank' order by y;
+                 whole_row
+--------------------------------------------
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . 0 . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
 (21 rows)
 
 materialize=>
@@ -310,20 +312,20 @@ Fascinating!
 
 Let's do the `1` mine next:
 ```
-materialize=> select whole_row from output where mine = 1 order by y;
-    whole_row
-------------------
- ................
- ................
- ................
- ................
- ................
- .....X..........
- ................
- ................
- ................
- ................
- ................
+materialize=> select whole_row from output where mine = 1 and user = 'arjun' order by y;
+            whole_row
+----------------------------------
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . X . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
 (11 rows)
 
 materialize=>
@@ -339,7 +341,7 @@ Let's now ramp up the amount of visible information by making some informed gues
 You can play Minesweeper by repeatedly `INSERT`ing into `flags` and `tests`.
 
 This probably gets tedious very quickly.
-I could tell you; I haven't tried.
+I couldn't tell you; I haven't tried.
 
 Instead, we can write SQL queries to produce modifications to these tables and insert them.
 
@@ -352,7 +354,7 @@ This is just a matter of looking at `totals` for counts of zero, and testing all
 -- We can test locations we know have no adjacent mines!
 -- In fact, we can do this over and over until we stop inserting things.
 create view should_test as
-select distinct new_x as x, new_y as y, mine as test
+select distinct new_x as x, new_y as y, mine as test, user
 from
     (select * from totals where count = 0),
     generate_series(x - 1, x + 1) as new_x,
@@ -365,16 +367,16 @@ select * from distinct_tests;
 If we peek at the contents of this view, we'll see locations that are safe to test.
 ```
 materialize=> select * from should_test;
- x  | y  | test
-----+----+------
-  0 |  1 |    0
-  0 | -1 |    0
-  1 |  0 |    0
-  1 |  1 |    0
-  1 | -1 |    0
- -1 |  0 |    0
- -1 |  1 |    0
- -1 | -1 |    0
+ x  | y  | test | user
+----+----+------+-------
+  0 |  1 |    0 | frank
+  0 | -1 |    0 | frank
+  1 |  0 |    0 | frank
+  1 |  1 |    0 | frank
+  1 | -1 |    0 | frank
+ -1 |  0 |    0 | frank
+ -1 |  1 |    0 | frank
+ -1 | -1 |    0 | frank
 (8 rows)
 
 materialize=>
@@ -390,30 +392,30 @@ INSERT 0 8
 This is now an exciting moment.
 Let's look at the board again, for mines of type `0`.
 ```
-materialize=> select whole_row from output where mine = 0 order by y;
-       whole_row
+materialize=> select whole_row from output where mine = 0 and user = 'frank' order by y;
+                 whole_row
 -----------------------
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .........100.........
- .........100.........
- .........111.........
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . 1 0 0 . . . . . . . . .
+  . . . . . . . . . 1 0 0 . . . . . . . . .
+  . . . . . . . . . 1 1 1 . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
 (21 rows)
 
 materialize=>
@@ -434,30 +436,30 @@ Eight more insertions!
 This means that things changed again.
 
 ```
-materialize=> select whole_row from output where mine = 0 order by y;
-       whole_row
+materialize=> select whole_row from output where mine = 0 and user = 'frank' order by y;
+                 whole_row
 -----------------------
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .........2121........
- .........1000........
- .........1000........
- .........1111........
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . 2 1 2 1 . . . . . . . .
+  . . . . . . . . . 1 0 0 0 . . . . . . . .
+  . . . . . . . . . 1 0 0 0 . . . . . . . .
+  . . . . . . . . . 1 1 1 1 . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
 (21 rows)
 
 materialize=>
@@ -508,30 +510,30 @@ You can imagine why `WITH RECURSIVE` can occasionally be popular.
 
 Let's take a peek at the output again.
 ```
-materialize=> select whole_row from output where mine = 0 order by y;
-       whole_row
+materialize=> select whole_row from output where mine = 0 and user = 'frank' order by y;
+                 whole_row
 -----------------------
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .........21213.......
- .........100012......
- .........100001111...
- .........111110001...
- .............21011...
- .......222....101....
- ...2122101.1111012...
- ...200000111000001...
- ...210000000000012...
- ....1111001121112....
- .......1112..........
- .....................
- .....................
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . 2 1 2 1 3 . . . . . . .
+  . . . . . . . . . 1 0 0 0 1 2 . . . . . .
+  . . . . . . . . . 1 0 0 0 0 1 1 1 1 . . .
+  . . . . . . . . . 1 1 1 1 1 0 0 0 1 . . .
+  . . . . . . . . . . . . . 2 1 0 1 1 . . .
+  . . . . . . . 2 2 2 . . . . 1 0 1 . . . .
+  . . . 2 1 2 2 1 0 1 . 1 1 1 1 0 1 2 . . .
+  . . . 2 0 0 0 0 0 1 1 1 0 0 0 0 0 1 . . .
+  . . . 2 1 0 0 0 0 0 0 0 0 0 0 0 1 2 . . .
+  . . . . 1 1 1 1 0 0 1 1 2 1 1 1 2 . . . .
+  . . . . . . . 1 1 1 2 . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
 (21 rows)
 
 materialize=>
@@ -544,12 +546,12 @@ We've built up a little island, and might now start thinking about where we can 
 
 We can place flags using a variety of rules.
 We'll use a simple one: if a grid cell with a count is short mines exactly the number of unmarked neighbors, all those neighbors must be mines.
-This rule is great for filling in all of those corners and pockets you see up above.
+This rule is great for filling in all of those nooks and crannies you see up above.
 
 ```sql
 -- We can flag locations when the count equals the number of untested neighbors.
-create view could_flag as
-select x, y, mine as flag
+create view should_flag_from as
+select x, y, mine as flag, user
 from totals
 where totals.count > 0 and totals.count = 9 - (select count(*) from (
     select distinct *
@@ -560,11 +562,11 @@ where totals.count > 0 and totals.count = 9 - (select count(*) from (
     where tests.x = probe_x and tests.y = probe_y and tests.test = mine
 ));
 
--- I DONT UNDERSTAND THIS ANY MORE! EXPLAIN!
+-- All adjacent, unmarked locations must be mines.
 create view should_flag as
-select distinct * from (select probe_x as x, probe_y as y, flag
+select distinct * from (select probe_x as x, probe_y as y, flag, user
 from
-    could_flag,
+    should_flag_from,
     generate_series(x - 1, x + 1) as probe_x,
     generate_series(y - 1, y + 1) as probe_y
 )
@@ -578,20 +580,20 @@ We can take a peek at the `should_flag` view, containing locations known to be m
 
 ```
 materialize=> select * from should_flag;
- x  | y  | flag
-----+----+------
-  0 |  4 |    0
-  1 |  8 |    0
-  2 |  2 |    0
-  3 |  3 |    0
-  4 | -2 |    0
-  5 | -1 |    0
-  7 |  3 |    0
-  7 |  7 |    0
- -7 |  7 |    0
- -5 |  3 |    0
- -4 |  3 |    0
- -4 |  8 |    0
+ x  | y  | flag | user
+----+----+------+-------
+  0 |  4 |    0 | frank
+  1 |  8 |    0 | frank
+  2 |  2 |    0 | frank
+  3 |  3 |    0 | frank
+  4 | -2 |    0 | frank
+  5 | -1 |    0 | frank
+  7 |  3 |    0 | frank
+  7 |  7 |    0 | frank
+ -7 |  7 |    0 | frank
+ -5 |  3 |    0 | frank
+ -4 |  3 |    0 | frank
+ -4 |  8 |    0 | frank
 (12 rows)
 
 materialize=>
@@ -602,30 +604,30 @@ Let's just add them in, and check out the picture again.
 ```
 materialize=> insert into flags select * from should_flag;
 INSERT 0 12
-materialize=> select whole_row from output where mine = 0 order by y;
-       whole_row
+materialize=> select whole_row from output where mine = 0 and user = 'frank' order by y;
+                 whole_row
 -----------------------
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .........21213X......
- .........100012X.....
- .........100001111...
- .........111110001...
- ............X21011...
- .....XX222...X101X...
- ...2122101X1111012...
- ...200000111000001...
- ...210000000000012...
- ...X1111001121112X...
- ......X1112X.........
- .....................
- .....................
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . 2 1 2 1 3 X . . . . . .
+  . . . . . . . . . 1 0 0 0 1 2 X . . . . .
+  . . . . . . . . . 1 0 0 0 0 1 1 1 1 . . .
+  . . . . . . . . . 1 1 1 1 1 0 0 0 1 . . .
+  . . . . . . . . . . . . X 2 1 0 1 1 . . .
+  . . . . . X X 2 2 2 . . . X 1 0 1 X . . .
+  . . . 2 1 2 2 1 0 1 X 1 1 1 1 0 1 2 . . .
+  . . . 2 0 0 0 0 0 1 1 1 0 0 0 0 0 1 . . .
+  . . . 2 1 0 0 0 0 0 0 0 0 0 0 0 1 2 . . .
+  . . . X 1 1 1 1 0 0 1 1 2 1 1 1 2 X . . .
+  . . . . . . X 1 1 1 2 X . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
 (21 rows)
 
 materialize=>
@@ -633,27 +635,35 @@ materialize=>
 
 Look at all those `X` things!
 
-### Ready Player `1`
+### Ready Player `arjun`
 
 Having marked all these mines of type `0`, the boards for other mine types can be updated!
 Remember, each of these mines mean that the grid cell is free of mines of other types.
-Here is what that looks like for other players.
+Let's add all of our correct mine placement to `tests` for another user.
 
 ```
-materialize=> select whole_row from output where mine = 1 order by y;
-    whole_row
-------------------
- ................
- ................
- ................
- .........3......
- ..........1.....
- .....X..........
- ................
- .......2........
- 11......1...2...
- .....1..........
- ................
+materialize=> insert into tests select x, y, 1, 'arjun' from correct_flags where not flag = 1;
+INSERT 0 12
+materialize=>
+```
+
+Now we can check out that other viewport and see what is afoot there.
+
+```
+materialize=> select whole_row from output where mine = 1 and user = 'arjun' order by y;
+            whole_row
+----------------------------------
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . . . . . 3 . . . . . .
+  . . . . . . . . . . 1 . . . . .
+  . . . . . X . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
+  . . . . . . . 2 . . . . . . . .
+  1 1 . . . . . . 1 . . . 2 . . .
+  . . . . . 1 . . . . . . . . . .
+  . . . . . . . . . . . . . . . .
 (11 rows)
 
 materialize=>
@@ -666,158 +676,94 @@ No zeros though, so no automatic progress to make.
 How about mines of type `2`?
 
 ```
-materialize=> select whole_row from output where mine = 2 order by y;
- whole_row
------------
-(0 rows)
-
-materialize=>
-```
-
-Ah, we need a viewport, don't we?
-```
-materialize=> insert into viewport values (-10, 10, -10, 10, 2);
+materialize=> insert into tests select x, y, 2, 'brent' from correct_flags where not flag = 2;
+INSERT 0 13
+materialize=> materialize=> insert into viewport values (-10, 10, -10, 10, 2, 'brent');
 INSERT 0 1
-materialize=> insert into viewport values (-10, 10, -10, 10, 3);
-INSERT 0 1
-materialize=> insert into viewport values (-10, 10, -10, 10, 4);
-INSERT 0 1
-materialize=> insert into viewport values (-10, 10, -10, 10, 5);
-INSERT 0 1
-materialize=>
-```
-
-Now let's try that again for mines of type `2`.
-```
-materialize=> select whole_row from output where mine = 2 order by y;
-       whole_row
------------------------
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- .....................
- ..............0......
- ...............2.....
- ..........2..........
- .....................
- ............0........
- .....13......3...3...
- ..........2..........
- .....................
- .....................
- ...0.............0...
- ......1....1.........
- .....................
- .....................
+materialize=> select whole_row from output where mine = 2 and user = 'brent' order by y;
+                 whole_row
+--------------------------------------------
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . 0 . . . . . .
+  . . . . . . . . . . . . . . . 4 . . . . .
+  . . . . . . . . . . 4 . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . 0 . . . . . . . .
+  . . . . . 2 6 . . . . . . 6 . . . 6 . . .
+  . . . . . . . . . . 4 . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . 0 . . . . . . . . . . . . . 0 . . .
+  . . . . . . 2 . . . . 2 . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
 (21 rows)
 
 materialize=>
 ```
 
-Several zeros!
-Let's expand them out!
-
+This player now has some zeros to explore, beyond the four at `(0, 0)`.
 ```
-materialize=> insert into tests select * from should_test;
-INSERT 0 86
-materialize=>
-```
-
-Eek.
-Eighty six additions.
-
-```
-materialize=> insert into tests select * from should_test;
-INSERT 0 70
-materialize=> insert into tests select * from should_test;
-INSERT 0 42
-materialize=> insert into tests select * from should_test;
-INSERT 0 50
-materialize=> insert into tests select * from should_test;
-INSERT 0 39
-materialize=> insert into tests select * from should_test;
-INSERT 0 40
-materialize=> insert into tests select * from should_test;
-INSERT 0 47
-materialize=> insert into tests select * from should_test;
-INSERT 0 53
-materialize=> insert into tests select * from should_test;
-INSERT 0 36
-materialize=> insert into tests select * from should_test;
-INSERT 0 35
-materialize=> insert into tests select * from should_test;
-INSERT 0 33
-materialize=> insert into tests select * from should_test;
-INSERT 0 28
-materialize=> insert into tests select * from should_test;
-INSERT 0 20
-materialize=> insert into tests select * from should_test;
-INSERT 0 20
-materialize=> insert into tests select * from should_test;
-INSERT 0 28
 materialize=> insert into tests select * from should_test;
 INSERT 0 30
 materialize=> insert into tests select * from should_test;
-INSERT 0 30
-materialize=> insert into tests select * from should_test;
-INSERT 0 27
-materialize=> insert into tests select * from should_test;
-INSERT 0 17
+INSERT 0 19
 materialize=> insert into tests select * from should_test;
 INSERT 0 15
 materialize=> insert into tests select * from should_test;
-INSERT 0 3
+INSERT 0 21
+materialize=> insert into tests select * from should_test;
+INSERT 0 16
+materialize=> insert into tests select * from should_test;
+INSERT 0 21
+materialize=> insert into tests select * from should_test;
+INSERT 0 25
+materialize=> insert into tests select * from should_test;
+INSERT 0 29
+materialize=> insert into tests select * from should_test;
+INSERT 0 12
+materialize=> insert into tests select * from should_test;
+INSERT 0 9
+materialize=> insert into tests select * from should_test;
+INSERT 0 8
+materialize=> insert into tests select * from should_test;
+INSERT 0 2
 materialize=> insert into tests select * from should_test;
 INSERT 0 0
-materialize=>
 ```
 
-This is across all of the mine types, mind you.
-Not all of them had zeros, though, so not all of them grew much.
 ```
-materialize=> select test, count(*) from correct_tests group by test;
- test | count
-------+-------
-    0 |   101
-    2 |   216
-    3 |    24
-    5 |   509
-(4 rows)
-```
-
-Both `1` and `4` had no zeros, and so gained no tests.
-Mines of type `5` are out of control, apparently.
-Let's check.
-
-```
-materialize=> select whole_row from output where mine = 5 order by y;
-       whole_row
------------------------
- .....................
- 2......11112111......
- 124....10000001......
- 001111.21011101......
- 0000012.101.112......
- 00000011101111.......
- 00000000000001111....
- 00000000001221001111.
- 00122100113..1000001.
- 112..2101....2000001.
- ......20112..1000123.
- 12....20001..11111...
- 01...310123.2...112..
- 11...1001....2..201..
- .....1001222....102..
- .....1100001.222102..
- ......211001.100001..
- ...1....1002.200001..
- ......1.1113.310001..
- ..............1000123
- ............321000001
+materialize=> select whole_row from output where mine = 2 and user = 'brent' order by y;
+                 whole_row
+--------------------------------------------
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . . . . . . . . . .
+  . . . . . . . . . . . . 1 1 1 2 . . . . .
+  . . . . . 2 2 1 1 1 . . 1 0 0 1 . . . . .
+  . 1 1 2 2 1 0 0 0 1 . . 2 1 2 2 . . . . .
+  1 1 0 0 0 0 1 1 1 1 2 . . . . . . . . 1 1
+  1 0 0 0 0 1 2 . 1 0 1 1 2 1 . . . . . 1 0
+  1 0 0 0 0 1 . . 2 0 0 0 0 1 . . . . . 2 1
+  1 0 0 0 0 1 3 . 4 2 1 1 2 3 . . . 3 . . 1
+  1 0 1 1 1 1 . . . . 2 . . . . . . . . 2 1
+  1 0 1 . . . . . . . . . . . . . 1 1 1 1 0
+  1 0 1 1 1 1 3 . . . . . . . . . 2 0 0 0 0
+  0 0 0 0 0 0 2 . . . . . . . . . 2 0 0 0 0
+  0 1 1 2 1 1 1 . . . . 1 . . . . 4 1 2 1 1
+  0 1 . . . . . . . . . . . . . . . . . . .
+  0 1 1 2 1 2 . . . . . . . . . . . . . . .
 (21 rows)
 
 materialize=>
